# patchguard-erp

./: .dockerignore  .gitignore  README.md  docker-compose.yml  netlify.toml
.do/: app.yaml
apps/agent/: .env.example  Dockerfile.agent  Dockerfile.worker  README.md  conftest.py  pyproject.toml
apps/agent/agent/: __init__.py
apps/agent/agent/routing/: directions.py  sampler.py
apps/agent/api/: jobs.py  main.py  schemas.py
apps/agent/worker/: package-lock.json  package.json
apps/agent/worker/src/: captureSource.ts  events.ts  index.ts  types.ts  upload.ts
apps/agent/worker/src/earth/: flyTo.ts  source.ts
apps/agent/worker/src/satellite/: source.ts
apps/agent/worker/src/streetview/: source.ts
apps/backend-local/: .env.example  Dockerfile  README.md  db.py  geo.py  init_db.py  main.py  model.py  models_db.py  requirements.txt  security.py  storage.py  verify_e2e.py
apps/backend-local/reporting/: generator.py  prompts.py
apps/backend-local/routers/: actions.py  auth.py  contractors.py  inspections.py  users.py
apps/web/: .env.example  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
apps/web/scripts/: gen-icons.mjs
apps/web/src/: App.css  App.tsx  index.css
apps/web/src/auth/: AuthContext.tsx  LoginPage.tsx  Protected.tsx
apps/web/src/components/: AgentView.tsx  PointPicker.tsx  ReportPanel.tsx  WorkPathEditor.tsx
apps/web/src/layout/: AppShell.tsx
apps/web/src/lib/: api.ts  erpApi.ts  jobApi.ts  types.ts
apps/web/src/pages/: ActionsPage.tsx  ContractorsPage.tsx  DashboardPage.tsx  (+2 more)
