[project]
name = "patchguard-agent"
version = "0.1.0"
description = "ADK road-survey planning agent + FastAPI control plane for PatchGuard"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.0",
    "polyline>=2.0.2",
    "geographiclib>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.6.0",
]

[tool.setuptools]
packages = ["agent", "agent.routing", "api"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
